# ris-osvp-metadata-camdkit

./: .gitattributes  CHANGELOG.md  CONTRIBUTING.txt  LICENSE.txt  MIGRATION.md  OpenTrackIO_WIP.json  Pipfile  README.md  correctness-plan.md  index.html  index.md  pyproject.toml  setup.cfg
.github/workflows/: main.yml
docs/: high-level-design.md
docs/arrows/: README.md  camera-identity.md  format-bridge.md  index.yaml  optical-characteristics.md  protocol-envelope.md  spatial-tracking.md  temporal-synchronization.md
docs/llds/: camera-identity.md  format-bridge.md  optical-characteristics.md  protocol-envelope.md  spatial-tracking.md  temporal-synchronization.md
docs/specs/: camera-identity-specs.md  format-bridge-specs.md  optical-characteristics-specs.md  protocol-envelope-specs.md  spatial-tracking-specs.md  temporal-synchronization-specs.md
opentrackio/: index.html  schema.json
opentrackio/css/: style.css
opentrackio/examples/: complete_dynamic_example.json  complete_static_example.json  recommended_dynamic_example.json  recommended_static_example.json
src/main/python/camdkit/: camera_types.py  cli.py  clip.py  compatibility.py  examples.py  framework.py  lens_types.py  make_documentation.py  model.py  numeric_types.py  string_types.py  timing_types.py  tracker_types.py  transform_types.py  units.py  utils.py  versioning_types.py
src/main/resources/css/: generic-light.min.css  style.css
src/main/resources/lyx/: OpenCV_to_OpenTrackIO.lyx  OpenCV_to_OpenTrackIO.tex
src/test/cpp/opentrackio-parser/: .gitignore  CMakeLists.txt  README.md  conanfile.py  get-json-files.bat  get-json-files.sh  get-opentrackio-json.sh
src/test/cpp/opentrackio-parser/opentrackio-parser/: CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.txt
src/test/cpp/opentrackio-parser/opentrackio-parser/src/: opentrackIO_parser.cpp  opentrackIOlib.cpp  opentrackIOlib.h
src/test/cpp/opentrackio-parser/src/: main.cpp
src/test/cpp/opentrackio-parser/src/helpers/: opentrackIOlib.cpp  opentrackIOlib.h
src/test/cpp/opentrackio-parser/src/opentrackio-lib/: OpenTrackIOParser.cpp  OpenTrackIOParser.h
src/test/opentrackIO_parser/cpp/: opentrackIOlib.cpp  opentrackIOlib.h
src/test/opentrackIO_parser/example_json/: complete_static_example_20240907.json  opentrackio_complete_dynamic_example_20241001.json  opentrackio_complete_dynamic_example_20241002.json  opentrackio_complete_static_example-20241001.json  opentrackio_complete_static_example_20241002.json  opentrackio_schema_20241001.json  opentrackio_schema_20241002.json
src/test/opentrackIO_parser/python/: README.md  opentrackIO_parser.py  opentrackIOlib.py  opentrackio_lib.py  opentrackio_parser.py
src/test/python/: test_arri_reader.py  test_bmd_reader.py  test_camera_types.py  test_canib_reade.py  test_canon_reader.py  test_clip.py  test_compatibility.py  test_cooke_data.py  test_example_regression.py  test_framework.py  test_lens_types.py  test_model.py  test_mosys_reader.py  test_numeric_types.py  test_red_reader.py  test_schema_regression.py  test_string_types.py  test_timing_types.py  test_tracker_types.py  test_transform_types.py  test_utils.py  test_venice_reader.py  test_versioning_types.py
src/test/python/parser/: README.md  opentrackio_lib.py  opentrackio_parser.py  opentrackio_receiver.py  opentrackio_sender.py
src/test/python/parser-opentrackIO/: README.txt  opentrackIO_decoder.py  opentrackIO_parser.py  opentrackIOlib.py
src/tools/python/: generate_complete_dynamic_example.py  generate_complete_static_example.py  generate_component_schemas.py  generate_dynamic_example.py  generate_example.py  generate_opentrackio_schema.py  generate_recommended_dynamic_example.py  generate_recommended_static_example.py  generate_static_example.py  make_documentation.py  make_opentrackio_documentation.py  make_opentrackio_dynamic_schema.py  make_opentrackio_static_schema.py
(+80 files in other folders)
